Added links for recipes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    
+    <h2>Here are a some of my favourite recipes</h2>
+        <p><a href="recipes/lok-lak.html" target="_blank">Lok Lak</a></p>
+        <p><a href="recipes/chicken-parma.html" target="_blank">Chicken Parma</a></p>
+        <p><a href="recipes/chicken-amok.html" target="_blank">Chicken Amok</a></p>
 </body>
 </html>
