Added two morerecipes and methods

--- a/recipes/chicken-parma.html
+++ b/recipes/chicken-parma.html
@@ -10,6 +10,47 @@
 <body>
     <h1>Chicken Parma Recipe</h1>
     <img src="../img/chicken-parma.jpg" width="400"  alt="A delicious Chicken Parma dish.">
+    <p><a href="../index.html"><strong>Go To Homepage</strong></a></p>
 
+    <h2>Description</h2>
+        <p>Chicken Parmigiana – the great pub favourite has finally landed! Affectionately referred by Aussies as Parma, Parmi.</p>
+        <p>You’ll love this homemade recipe with extra crispy schnitzel, best ever parmigiana sauce and juicy marinated chicken.</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>2 tsp finely grated lemon rind</li>
+            <li>1 garlic clove, crushed</li>
+            <li>1 tsp oregano leaves</li>
+            <li>1 cup panko breadcrumbs</li>
+            <li>1/4 cup plain flour</li>
+            <li>1 egg, lightly beaten</li>
+            <li>1 tbsp milk</li>
+            <li>2 Free Range Chicken Breast, halved horizontally</li>
+            <li>1/4 cup extra virgin olive oil</li>
+            <li>1 brown onion, finely chopped</li>
+            <li>2 garlic cloves, crushed, extra</li>
+            <li>700g btl Mutti Tomato Passata</li>
+            <li>2 tbsp chopped fresh basil, plus extra to serve</li>
+            <li>2 tbsp chopped fresh basil, plus extra to serve</li>
+            <li>1/3 cup finely grated parmesan</li>
+            <li>Salad leaves, to serve</li>
+        </ul>
+
+        <h3>Method</h3>
+        <ol>
+            <li><p>Combine rind, garlic and oregano in a large shallow bowl. Add breadcrumbs. Season with salt and pepper. Mix well.</p> 
+                <p>Place flour in a bowl. Whisk egg and milk in a separate shallow bowl.</p> 
+                <p>Working with 1 chicken piece at a time, toss in flour. Dip in egg mixture, then press in breadcrumb mixture to coat.</p> 
+                <p>Transfer to a plate.</p></li>
+            <li><p>Heat 2 tablespoons oil in a large frying pan over medium-high heat. Cook chicken for 4 to 5 minutes each side or until golden. Transfer to a plate.</p></li>
+            <li><p>Heat remaining oil in pan. Add onion. Cook, stirring, for 5 minutes or until softened. Add extra garlic.</p>
+                <p>Cook for 1 minute or until fragrant. Stir in passata and basil. Season. Bring to a simmer. Simmer for 3 to 4 minutes or until slightly thickened.</p></li>
+            <li><p>Preheat grill on medium-high. Spoon half the passata mixture onto a baking tray. Top with chicken. Spoon over remaining passata mixture.</p>
+                <p>Top chicken with mozzarella and parmesan. Grill for 4 to 5 minutes or until cheese is melted and golden. Top with extra basil. Serve with salad leaves.</p></li>
+        </ol>
+
+        <p><strong>Enjoy this Aussie classic dish!</strong></p>
+        <p><a href="../index.html"><strong>Go To Homepage</strong></a></p>
+        
 </body>
 </html>
