--- a/recipes/lok-lak.html
+++ b/recipes/lok-lak.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Lok Lak Recipe</h1>
+    <p><a href="../index.html"><strong>Go To Homepage</strong></a></p>
     <img src="../img/lok-lak.png" width="400"  alt="A delicious Cambodian Lok Lak dish.">
 
     <h2>Description</h2>
@@ -19,7 +20,7 @@
         <ul>
             <li>300g beef steak, sliced</li>
             <li>1 teaspoon fish sauce</li>
-            <li>1 / 4 soy sauce</li>
+            <li>1/4 soy sauce</li>
             <li>1 tablespoon oyster sauce</li>
             <li>1 tablespoon palm sugar</li>
             <li>2 garlic cloves</li>
@@ -42,7 +43,7 @@
             <ul>
                 <li>1 cucumber, peeled and finely sliced</li>
                 <li>2 tomatoes, sliced</li>
-                <li>1 / 2 onion, finely sliced</li>
+                <li>1/2 onion, finely sliced</li>
                 <li>A few lettuce leaves</li>
             </ul>
 
@@ -60,6 +61,7 @@
             </ol>
 
     <p><strong>And that's how you make Cambodia Lok Lak! Feel free to subsitute the beef with chicken.</strong></p>
+    <p><a href="../index.html"><strong>Go To Homepage</strong></a></p>
         
 </body>
 </html>
