--- a/recipes/chicken-amok.html
+++ b/recipes/chicken-amok.html
@@ -10,6 +10,49 @@
 <body>
     <h1>Chicken Amok Recipe</h1>
     <img src="../img/chicken-amok.jpg" width="400" alt="A delicious Cambodian Chicken Amok dish.">
+    <p><a href="../index.html"><strong>Go To Homepage</strong></a></p>
+
+    <h2>Description</h2>
+        <p>When you ask anyone in Cambodia what their most typical dish is, you will hear "Amok". So what is this exotic sounding dish?</p>
+        <p>Basically it is a mouth watering curry dish that is served in a folded up banana leaf shaped like a bowl.</p>
+        <p>Not only is the presentation absolutely gorgeous, but the flavor of chicken amok is out of this world.</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 Chicken breast, skinless boneless</li>
+            <li>3 Garlic cloves</li>
+            <li>1 tbsp grated fresh turmeric</li>
+            <li>2 tbsp grated galangal</li>
+            <li>2 lemongrass stems (inner core only), grated</li>
+            <li>2 eschalots, chopped</li>
+            <li>Finely grated zest of 1 lime</li>
+            <li>1 tbsp shrimp paste</li>
+            <li>1/4 cup grated palm sugar</li>
+            <li>6 kaffir lime leaves, finely shredded</li>
+            <li>400ml coconut milk</li>
+            <li>400ml coconut milk</li>
+            <li>1 long red chilli, thinly sliced</li>
+            <li>2 dried red chillies, soaked in boiling water, drained, chopped</li>
+            <li>Steamed rice, to serve</li>
+        </ul>
+
+        <h3>Method</h3>
+        <ol>
+            <li><p>Combine the chilli, garlic, turmeric, galangal, lemongrass, eschalot, lime zest, shrimp paste, palm sugar, half the kaffir lime leaves,</p>
+                <p> and 2 teaspoons salt in a mortar and pestle or small food processor and pound or whiz until a fine paste.</p></li>
+            <li><p>Transfer paste to a frypan over medium heat and cook, stirring, for 3-4 minutes, until fragrant.</p>
+                <p>Add the coconut milk (reserving 2 tablespoons for serving) and bring to a simmer. Remove from heat, transfer to a bowl and allow to cool slightly.</p>
+                <p>Add the chicken and toss to combine.</p></li>
+            <li><p>Cut each banana leaf into two 25cm x 15cm rectangles. Carefully wave both sides of each leaf over a medium-high flame, then set aside.</p></li>
+                <p>Lay each banana leaf out, divide the chicken among the leaves and fold in the ends, securing with toothpicks to form 4 small trays.</p>
+                <p>Top with remaining marinade and sprinkle with remaining kaffir lime leaves and half the sliced chilli.</p>
+                <p>Place in a steamer over medium-high heat and cook for 15 minutes or until the chicken is tender and cooked through.</p></li>
+            <li><p>Place the parcels on serving plates. Remove toothpicks, drizzle with remaining 2 tablespoons coconut milk and scatter with remaining sliced chilli.</p>
+                <p>Serve with rice</p></li>
+        </ol>
+        
+        <p><strong>Serve hot and experience this wonderful curry from Cambodia. You can also subsitute the chicken with fish for a more authentic taste.</strong></p>
+        <p><a href="../index.html"><strong>Go To Homepage</strong></a></p>
 
 </body>
 </html>
