--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <h2>Here are a some of my favourite recipes</h2>
+    <h1>My Recipes</h1>
+    <h2>Learn how to cook some of my favourite dishes!</h2>
         <ul>
-            <li><a href="recipes/lok-lak.html" target="_blank">Lok Lak</a></li>
-            <li><a href="recipes/chicken-parma.html" target="_blank">Chicken Parma</a></li>
-            <li><a href="recipes/chicken-amok.html" target="_blank">Chicken Amok</a></li>
-
+            <li><strong><a href="recipes/lok-lak.html">Lok Lak</a></strong></li>
+            <img src="./img/lok-lak.png" width="400"  alt="A delicious Cambodian Lok Lak dish.">
+            <p></p>
+            <li><strong><a href="recipes/chicken-parma.html">Chicken Parma</a></strong></li>
+            <img src="./img/chicken-parma.jpg" width="400"  alt="A delicious Chicken Parma dish.">
+            <p></p>
+            <li><strong><a href="recipes/chicken-amok.html">Chicken Amok</a></strong></li>
+            <img src="./img/chicken-amok.jpg" width="400" alt="A delicious Cambodian Chicken Amok dish.">
         </ul>   
        
 </body>
